# n64recomp-clang

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LLVM_CMakePresets.json  LLVM_CMakeUserPresets.json  N64Recomp_CMakeUserPresets.json  README.md  build_all.py  build_common.py  build_llvm.py  build_msvc_all_targets.ps1  build_msvc_mips_only.ps1  build_n64recomp.py  build_shim_tool.py  generate_release_message.py  gh_generate_release_message_collection.py  gh_generate_release_message_llvm.py  gh_get_build_clang_version.py  gh_get_build_shim_version.py  mips_only_build.ps1  prepare_min_dist.ps1  print_cwd.py  run_build.py
.github/workflows/: build-windows.yml  ci-build-dev-branch.yml  ci-build-windows.yml  ci-publish-collection-prerelease.yml  ci-publish-collection-release-preview.yml  ci-publish-collection-release.yml  ci-publish-llvm-release.yml  ci-publish-release.yml  run-build-macos.yml  run-build-ubuntu.yml  run-build-windows.yml
shim-tool/: CMakeLists.txt  CMakePresets.json
shim-tool/src/: main.cpp
shim_tool/: CMakeLists.txt  CMakePresets.json
shim_tool/src/: CMakeLists.txt  config.cpp  config.hpp  globals.hpp  main.cpp  version.hpp
src/: main.cpp
